--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.roomorama:caldroid:3.0.1'
 }
